--- a/design.css
+++ b/design.css
@@ -16,17 +16,39 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    background-color: pink;
-    min-height: 300px;
+    background-image: linear-gradient(45deg, #ffa1ff 0%, #bd65bd 100%);
+    min-height: 500px;
     padding-bottom: 20px;
     text-transform: uppercase;
+    text-align: center;
+    width: auto;
 }
+
+header p{
+    width: auto;
+}
+
+ #bg-img{
+    -webkit-mask-image: linear-gradient(to top, transparent 50%, black 100%);
+	background-image: url(assets/Nayara.png);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+} 
+
+
 
 #social-media-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-block: 10px;
-    color: white;
+}
+
+#social-media-container a{
+    text-decoration: none;
+    color: currentColor;
 }
 
 .media-content {
@@ -77,8 +99,10 @@ button {
     font-weight: 400;
     text-transform: uppercase;
     border-radius: 4px;
+    margin-block: 0.5rem;
     transition: transform 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55), background-position 800ms cubic-bezier(0.68, -0.55, 0.265, 1.55), box-shadow 500ms linear;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    
 }
 
 button:hover {
@@ -94,7 +118,7 @@ button:hover {
 
 
 
-@media(min-width:600px){
+@media(min-width:780px){
 
     /* body{
         background-repeat: no-repeat;
@@ -113,12 +137,24 @@ button:hover {
 
     #text-container {
         float: right;
-        width: 50vw;
+        font-size: 1.3vw;
+        max-width:55vw;
     }
 
     #button-container{
         position: absolute;
-        right: 6rem;
+        right: 3vw;
         bottom: 4rem;
+        flex-direction: row;
+    }
+
+    #button-container button{
+        width: 13vw;
+        margin-inline: 0.2rem;
+        font-size: 1vw;
+    }
+
+    #text-container p{
+        max-width: 80vw;
     }
 }
