--- a/design.css
+++ b/design.css
@@ -126,8 +126,8 @@ button:hover {
     } */
 
     #header {
-        max-width: 350px;
-        height: 500px;
+        max-width: 30vw;
+        height: 30vw;
         position: absolute;
         top: 0;
         left: 7vw;
